sgd/reproduction/playground/objects/SMAX_PS_Service_Quote_IP_Line__c.object
<CustomObject>
    <fields>
        <fullName>SMAX_PS_ClonedFromServiceQuoteIPLine__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>元見積対象製品・項番</label>
        <referenceTo>SMAX_PS_Service_Quote_IP_Line__c</referenceTo>
        <relationshipLabel>見積対象製品・項番</relationshipLabel>
        <relationshipName>Service_Quote_IP_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Cloned_From_Quote__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>元サービス見積</label>
        <referenceTo>SVMXC__Quote__c</referenceTo>
        <relationshipLabel>見積対象製品・項番 (Cloned From Quote)</relationshipLabel>
        <relationshipName>Service_Quote_IP_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Discount__c</fullName>
        <label>値引き額</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Dislay_Text__c</fullName>
        <label>見積表示テキスト</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Equip_Exp_Sub_Total__c</fullName>
        <label>諸経費対象_検査機器費</label>
        <summarizedField>SMAX_PS_Quote_Lines__c.SMAX_PS_Line_Price__c</summarizedField>
        <summaryFilterItems>
            <field>SMAX_PS_Quote_Lines__c.SMAX_PS_Line_Type__c</field>
            <operation>equals</operation>
            <value>検査機器</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>SMAX_PS_Quote_Lines__c.SMAX_PS_Expense_Target__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>SMAX_PS_Quote_Lines__c.SMAX_PS_Service_Quote_IP_Line__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Equip_Sub_Total__c</fullName>
        <label>検査機器費</label>
        <summarizedField>SMAX_PS_Quote_Lines__c.SMAX_PS_Line_Price__c</summarizedField>
        <summaryFilterItems>
            <field>SMAX_PS_Quote_Lines__c.SMAX_PS_Line_Type__c</field>
            <operation>equals</operation>
            <value>検査機器</value>
        </summaryFilterItems>
        <summaryForeignKey>SMAX_PS_Quote_Lines__c.SMAX_PS_Service_Quote_IP_Line__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Expense_Percent__c</fullName>
        <formula>IF(ISPICKVAL(SMAX_PS_Service_Quote__r.SMAX_PS_Expense_Percent__c, &apos;10&apos;), 10,IF(ISPICKVAL(SMAX_PS_Service_Quote__r.SMAX_PS_Expense_Percent__c, &apos;15&apos;), 15,20 )  )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>諸経費パーセント</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Expense_Total_Final__c</fullName>
        <formula>(CEILING((SMAX_PS_Other_Sub_Total__c + 
	          SMAX_PS_Labor_Sub_Total__c +
	          SMAX_PS_Parts_Sub_Total__c +
	          SMAX_PS_Equip_Sub_Total__c +
	          SMAX_PS_Expense_Total_Temp__c )*0.001) * 1000 ) - (SMAX_PS_Other_Sub_Total__c + 
	                                                           SMAX_PS_Labor_Sub_Total__c +
	                                                           SMAX_PS_Parts_Sub_Total__c +
	                                                           SMAX_PS_Equip_Sub_Total__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>諸経費</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Expense_Total_Temp__c</fullName>
        <formula>(SMAX_PS_Parts_Exp_Sub_Total__c + 
	SMAX_PS_Labor_Exp_Sub_Total__c + 
	SMAX_PS_Equip_Exp_Sub_Total__c + 
	SMAX_PS_Other_Exp_Sub_Total__c) * (SMAX_PS_Expense_Percent__c/100)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>諸経費（仮）</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Installed_Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Installed Product</label>
        <referenceTo>SVMXC__Installed_Product__c</referenceTo>
        <relationshipLabel>Service Quote IP Line</relationshipLabel>
        <relationshipName>Service_Quote_IP_Line</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Is_WO_Created__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Work Order作成済み</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Labor_Exp_Sub_Total__c</fullName>
        <label>諸経費対象_人件費</label>
        <summarizedField>SMAX_PS_Quote_Lines__c.SMAX_PS_Line_Price__c</summarizedField>
        <summaryFilterItems>
            <field>SMAX_PS_Quote_Lines__c.SMAX_PS_Line_Type__c</field>
            <operation>equals</operation>
            <value>人件費</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>SMAX_PS_Quote_Lines__c.SMAX_PS_Expense_Target__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>SMAX_PS_Quote_Lines__c.SMAX_PS_Service_Quote_IP_Line__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Labor_Sub_Total__c</fullName>
        <label>人件費</label>
        <summarizedField>SMAX_PS_Quote_Lines__c.SMAX_PS_Line_Price__c</summarizedField>
        <summaryFilterItems>
            <field>SMAX_PS_Quote_Lines__c.SMAX_PS_Line_Type__c</field>
            <operation>equals</operation>
            <value>人件費</value>
        </summaryFilterItems>
        <summaryForeignKey>SMAX_PS_Quote_Lines__c.SMAX_PS_Service_Quote_IP_Line__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Other_Exp_Sub_Total__c</fullName>
        <label>諸経費対象_その他費</label>
        <summarizedField>SMAX_PS_Quote_Lines__c.SMAX_PS_Line_Price__c</summarizedField>
        <summaryFilterItems>
            <field>SMAX_PS_Quote_Lines__c.SMAX_PS_Line_Type__c</field>
            <operation>equals</operation>
            <value>その他</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>SMAX_PS_Quote_Lines__c.SMAX_PS_Expense_Target__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>SMAX_PS_Quote_Lines__c.SMAX_PS_Service_Quote_IP_Line__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Other_Sub_Total__c</fullName>
        <label>その他費用</label>
        <summarizedField>SMAX_PS_Quote_Lines__c.SMAX_PS_Line_Price__c</summarizedField>
        <summaryFilterItems>
            <field>SMAX_PS_Quote_Lines__c.SMAX_PS_Line_Type__c</field>
            <operation>equals</operation>
            <value>その他</value>
        </summaryFilterItems>
        <summaryForeignKey>SMAX_PS_Quote_Lines__c.SMAX_PS_Service_Quote_IP_Line__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Parts_Exp_Sub_Total__c</fullName>
        <formula>IF(SMAX_PS_Parts_Expense_Target__c, SMAX_PS_Parts_Sub_Total__c ,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>諸経費対象_材料費</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Parts_Expense_Target__c</fullName>
        <defaultValue>true</defaultValue>
        <label>材料費_諸経費対象</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Parts_Sub_Total__c</fullName>
        <label>材料費</label>
        <summarizedField>SMAX_PS_Quote_Lines__c.SMAX_PS_Line_Price__c</summarizedField>
        <summaryFilterItems>
            <field>SMAX_PS_Quote_Lines__c.SMAX_PS_Line_Type__c</field>
            <operation>equals</operation>
            <value>部品明細</value>
        </summaryFilterItems>
        <summaryForeignKey>SMAX_PS_Quote_Lines__c.SMAX_PS_Service_Quote_IP_Line__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Price_Book__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>価格表</label>
        <referenceTo>Pricebook2</referenceTo>
        <relationshipLabel>Service Quote IP Line</relationshipLabel>
        <relationshipName>Service_Quote_IP_Line</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>製品</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Service Quote IP Line</relationshipLabel>
        <relationshipName>Service_Quote_IP_Line</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Service_Pricebook__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>その他価格表</label>
        <referenceTo>SVMXC__Service_Pricebook__c</referenceTo>
        <relationshipLabel>Service Quote IP Line</relationshipLabel>
        <relationshipName>Service_Quote_IP_Line</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Service_Quote_Name__c</fullName>
        <formula>SMAX_PS_Service_Quote__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>見積番号</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Service_Quote_Status__c</fullName>
        <formula>TEXT(SMAX_PS_Service_Quote__r.SVMXC__Status__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>見積状況</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Service_Quote__c</fullName>
        <label>サービス見積</label>
        <referenceTo>SVMXC__Quote__c</referenceTo>
        <relationshipLabel>Service Quote IP Line</relationshipLabel>
        <relationshipName>Service_Quote_IP_Line</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Sub_Total__c</fullName>
        <formula>SMAX_PS_Parts_Sub_Total__c +
	 SMAX_PS_Labor_Sub_Total__c +
		 SMAX_PS_Equip_Sub_Total__c +
			 SMAX_PS_Other_Sub_Total__c +
				 SMAX_PS_Expense_Total_Final__c - 
                                           SMAX_PS_Discount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>小合計</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Task_Template__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>参照タスクテンプレート</label>
        <referenceTo>SVMXC__Task_Template__c</referenceTo>
        <relationshipLabel>Service Quote IP Line</relationshipLabel>
        <relationshipName>Service_Quote_IP_Line</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Tech_Total__c</fullName>
        <label>Tech Total</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Service_Price_Book__c</fullName>
        <formula>SMAX_PS_Service_Quote__r.SMAX_PS_Service_Pricebook__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Service Price Book</label>
        <type>Text</type>
    </fields>
    <label>見積対象製品・項番</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>SIP-{0000000}</displayFormat>
        <label>Service Quote IP Line Name</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>